--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@types/jest": "^23.3.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "react-test-renderer": "^16.4.1"
+    "eslint": "^5.2.0",
+    "eslint-plugin-jest": "^21.18.0",
+    "react-test-renderer": "^16.4.1",
+    "redux-mock-store": "^1.5.3"
   }
 }
