--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://thinkful-ei20.github.io/frames-client/",
   "dependencies": {
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.6.2",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/jest": "^23.3.0",
@@ -28,6 +31,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.2.0",
     "eslint-plugin-jest": "^21.18.0",
+    "gh-pages": "^1.2.0",
     "moment": "^2.22.2",
     "react-test-renderer": "^16.4.1",
     "redux-mock-store": "^1.5.3"
