--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^5.2.0",
     "eslint-plugin-jest": "^21.18.0",
     "gh-pages": "^1.2.0",
+    "jest-fetch-mock": "^1.6.5",
     "moment": "^2.22.2",
     "react-test-renderer": "^16.4.1",
     "redux-mock-store": "^1.5.3"
